# rag

./: .env.example  .gitignore  README.md  SETUP.md  app.py  pyproject.toml  requirements.txt  run_embeddings.py  run_eval.py  run_ingestion.py  run_rag.py  test_vertex.py
app/: streamlit_app.py
configs/: config.yaml
src/evaluation/: evaluator.py
src/generation/: llm.py
src/ingestion/: chunker.py  download_arxiv.py  pdf_extractor.py
src/rag/: __init__.py  config.py  embeddings.py  generator.py  ingestion.py  pipeline.py  retriever.py  vectorstore.py
src/retrieval/: embeddings.py  retriever.py
tests/: test_ingestion.py  test_pipeline.py  test_retriever.py
